# ContextFlow

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/00-Overview/: 00-high-level-blueprint.md
docs/02-System-Design/: 00-system-design.md  01-rag-deep-dive.md
docs/03-Evaluation/: 00-evaluation-strategy.md
docs/04-Prompts/: 00-prompt-templates.md
docs/05-Config/: 00-config-reference.md
docs/06-Implementation-Plan/: 00-implementation-plan.md
docs/07-DevOps/: 00-cicd-pipeline.md  01-basic-ci-setup.md
docs/internal/: 00-CRISP-DM-Plan.md
prompts/: rag_system_v1.txt
src/contextflow/: config.py  main.py  orchestrator.py
src/contextflow/api/: app.py  models.py
src/contextflow/cache/: semantic_cache.py
src/contextflow/ingestion/: chunker.py  embedder.py  loader.py  pipeline.py
src/contextflow/llm/: base.py  gemini.py  ollama.py  openai.py  router.py
src/contextflow/memory/: long_term.py  session.py
src/contextflow/redis/: client.py  (+1 more)
tests/: conftest.py
tests/eval/: eval_set.json
tests/fixtures/: sample.md  short.txt
tests/integration/: test_end_to_end_mvp.py  test_ingestion_pipeline.py  test_redis_connection.py  test_retrieval.py  test_session.py
tests/unit/: test_chunker.py  test_config.py  test_embedder.py  test_hybrid.py  test_indexes.py  test_llm_base.py  test_llm_gemini.py  test_llm_router.py  test_loader.py  test_models.py  test_orchestrator.py  test_redis_client.py  test_reranker.py  test_session.py  test_text_search.py  test_vector_search.py
(+9 files in other folders)
