[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextflow"
version = "0.1.0"
description = "Full-stack RAG assistant with Redis as the brain"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "redis[hiredis]>=5.0",
    "openai>=1.0",
    "tiktoken>=0.7",
    "click>=8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
local = [
    "sentence-transformers>=3.0",
]

[project.scripts]
contextflow = "contextflow.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
